test/invalid-syntax/fc51601_wildcard_fname/lambda.mag
--- Author: fc51601, José Sousa

-- wildcard should only be applied in binding

fun _ (_) : Unit -> Unit = print("Is this a lambda?")
fun main (_) : Unit -> Unit = _(unit)